<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#0000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bpWhite"
        android:orientation="vertical"
        android:layout_margin="3dp">

        <EditText
            style="@style/AxaForm"
            android:drawableEnd="@drawable/ic_action_edit"
            android:hint="@string/titleHint"
            android:id="@+id/newReminderTitle"
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_marginTop="@dimen/smallMargin" />

        <TextView
            android:layout_marginStart="@dimen/smallMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallMargin"
            android:layout_gravity="start"
            android:text="@string/dateTimeLabel" />

        <RelativeLayout
            style="@style/AxaForm"
            android:layout_marginStart="@dimen/smallMargin">

            <ImageView
                style="@style/RefIcon"
                android:id="@+id/remindIcon"
                android:src="@drawable/ic_action_time" />

            <TextView
                android:layout_margin="@dimen/smallMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/remindIcon"
                android:text="January 1, 2001"
                android:onClick="onClick"
                android:layout_centerVertical="true"
                android:id="@+id/newReminderDate" />

            <TextView
                android:layout_margin="@dimen/smallMargin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:onClick="onClick"
                android:text="00:00"
                android:id="@+id/newReminderTime" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin">


            <ImageButton
                style="@style/RefIcon"
                android:id="@+id/repeatButton"
                android:gravity="center"
                android:src="@drawable/ic_action_refresh" />

            <TextView
                android:id="@+id/newReminderRecurrence"
                android:layout_marginStart="@dimen/smallMargin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:layout_gravity="center"
                android:text="@string/defaultRepeatVal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin"
            android:orientation="horizontal">

            <ImageView
                style="@style/RefIcon"
                android:id="@+id/noteIcon"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_view_as_list" />

            <EditText
                android:id="@+id/newReminderNote"
                style="@style/AxaForm"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_width="match_parent"
                android:hint="@string/noteHint"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <TextView
            android:layout_marginLeft="@dimen/smallMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmTypeLabel" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin">

            <ImageView
                style="@style/RefIcon"
                android:id="@+id/alarmIcon"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_alarms" />

            <Spinner
                android:id="@+id/newReminderAlarmType"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:layout_marginLeft="@dimen/smallMargin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/typeLabel" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/smallMargin">

            <ImageView
                style="@style/RefIcon"
                android:id="@+id/typeIcon"
                android:layout_gravity="center"
                android:src="@drawable/ic_action_labels" />

            <Spinner
                android:id="@+id/remTypespinner"
                android:layout_marginEnd="@dimen/smallMargin"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editSaveBtn"
            android:id="@+id/editSaveBtn"
            android:layout_marginRight="@dimen/margin"
            android:layout_gravity="right"
            android:onClick="onClick" />
    </LinearLayout>
</RelativeLayout>